# tg-bot-service

receiver/: Dockerfile  pyproject.toml
sender/: Dockerfile  pyproject.toml
