[tool.poetry]
name = "tg-bot-service-receiver"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
Telethon = "1.21.1"
pydantic = "1.8.1"
httpx = "0.17.1"
cryptg = "0.4.0"
Pillow = "8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
